fix(addon-doc): fix overlapping by sticky header while using anchor links

--- a/projects/addon-doc/src/components/main/main.style.less
+++ b/projects/addon-doc/src/components/main/main.style.less
@@ -1,5 +1,11 @@
 @import 'taiga-ui-local';
 
+@sticky-header-height: 4rem;
+
+html {
+    scroll-padding-top: @sticky-header-height;
+}
+
 @keyframes tuiShaking {
     from,
     to {
